--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
